docs/api/qiskit/0.19/qiskit.aqua.circuits.PhaseEstimationCircuit.md
---
title: PhaseEstimationCircuit
description: API reference for qiskit.aqua.circuits.PhaseEstimationCircuit
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.circuits.PhaseEstimationCircuit
---

# PhaseEstimationCircuit

<span id="qiskit.aqua.circuits.PhaseEstimationCircuit" />

`PhaseEstimationCircuit(operator=None, state_in=None, iqft=None, num_time_slices=1, num_ancillae=1, expansion_mode='trotter', expansion_order=1, evo_time=6.283185307179586, state_in_circuit_factory=None, unitary_circuit_factory=None, shallow_circuit_concat=False, pauli_list=None)`

Quantum Phase Estimation Circuit.

**Parameters**

*   **operator** ([*WeightedPauliOperator*](qiskit.aqua.operators.legacy.WeightedPauliOperator "qiskit.aqua.operators.legacy.WeightedPauliOperator")) – the hamiltonian Operator object
*   **state\_in** ([*InitialState*](qiskit.aqua.components.initial_states.InitialState "qiskit.aqua.components.initial_states.InitialState")) – the InitialState component
*   **state** (*representing the initial quantum*) –
*   **iqft** (*Union\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*,* [*IQFT*](qiskit.aqua.components.iqfts.IQFT "qiskit.aqua.components.iqfts.IQFT")*]*) – the Inverse Quantum Fourier Transform as circuit or Aqua component
*   **num\_time\_slices** (*int*) – the number of time slices
*   **num\_ancillae** (*int*) – the number of ancillary qubits to use for the measurement
*   **expansion\_mode** (*str*) – the expansion mode (trotter|suzuki)
*   **expansion\_order** (*int*) – the suzuki expansion order
*   **evo\_time** (*float*) – the evolution time
*   **state\_in\_circuit\_factory** ([*CircuitFactory*](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.CircuitFactory")) – the initial state represented by
*   **object** (*by a CircuitFactory*) –
*   **unitary\_circuit\_factory** ([*CircuitFactory*](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.CircuitFactory")) – the problem unitary represented
*   **object** –
*   **shallow\_circuit\_concat** (*bool*) – indicate whether to use shallow (cheap) mode
*   **concatenation** (*for circuit*) –
*   **pauli\_list** (*list\[*[*Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")*]*) – the flat list of paulis for the operator

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Missing input

## Attributes

|                                                                                                                                                                                |                            |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------- |
| [`PhaseEstimationCircuit.ancillary_register`](qiskit.aqua.circuits.PhaseEstimationCircuit.ancillary_register "qiskit.aqua.circuits.PhaseEstimationCircuit.ancillary_register") | returns ancillary register |
| [`PhaseEstimationCircuit.auxiliary_register`](qiskit.aqua.circuits.PhaseEstimationCircuit.auxiliary_register "qiskit.aqua.circuits.PhaseEstimationCircuit.auxiliary_register") | returns auxiliary register |
| [`PhaseEstimationCircuit.state_register`](qiskit.aqua.circuits.PhaseEstimationCircuit.state_register "qiskit.aqua.circuits.PhaseEstimationCircuit.state_register")             | returns state register     |

## Methods

|                                                                                                                                                                                   |                                        |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------- |
| [`PhaseEstimationCircuit.construct_circuit`](qiskit.aqua.circuits.PhaseEstimationCircuit.construct_circuit "qiskit.aqua.circuits.PhaseEstimationCircuit.construct_circuit")(\[…]) | Construct the Phase Estimation circuit |

